2005-09-30  Francois Dumont  <dums@stlport...>

	* INSTALL, README, doc/FAQ, doc/README.msvc: Documentation updates.

	* doc/stlport_namespaces.txt: Small doc about STLport namespaces and how
	STLport replace native Standard library.

2005-09-26  Francois Dumont  <dums@stlport...>

	* build/*: Finished _STLP_LEAKS_PEDANTIC clean up from all make files.

2005-09-25  Francois Dumont  <dums@stlport...>

	* build/test/unit/gcc.mak: Remove _STLP_LEAKS_PEDANTIC option when building
	unit tests as this option is not defined when building the libs.

2005-09-22  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* build/Makefiles/gmake/sysid.mak: add underscore in architecture recognition,
	to parse targets like x86_64-unknown-linux-gnu.

2005-09-21  Francois Dumont  <dums@stlport...>

	* src/locale.cpp, facets_byname.cpp: Use of _STLP_ATOMIC_INCREMENT rather than
	a lock on a mutex when the macro is available.

2005-09-21  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* src/locale_impl.cpp: some internal functions used before declared.
	Thanks Thomas Kho for report.

2005-09-20  Francois Dumont  <dums@stlport...>

	* stlport/stl/_string.h, _string_workaround.h: code refactoring, substr method
	now use string constructor taking same parameters rather than the range
	constructor, thanks Felix Wyss report. Also add missing allocator parameter
	for non stateless allocators.

	* build/Makefiles/gmake: Restore resource build for Cygwin and MinGW, add
	it for Windows.

	* build/lib/configure.bat: Add --extra-cxxflag to inject additional compilation
	option in the nmake build system.

2005-09-20  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* test/unit/ptrspec_test.cpp: gcc 2.95 fail to roll out template instantiation
	for pointers to member function, skip this test for gcc 2.95.

	* build/Makefiles/gmake/gcc.mak: gcc 2.95 has no -fuse-cxa-atexit option.

	* build/lib/gcc.mak: don't use LEAK_PEDANTIC with gcc 2.95 [but this not help,